--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
     <h3>Welcome to my portfolio! feel free to browse through</h3>
     <hr size="4" noshade>
-    <h3><a href="../web dev/index.html">To my website💙♠👉</h3>
+    <h3><a href="../web dev/index.html">To my website💙♠👉</a></h3>
         <ul>
             <li><img src="port1.png" height="200"></li>
         <hr size="3" noshade>
     
             <li><img src="port2.png" height="200"></li>
         </ul>
-    <h3> <a href="../web dev/enquiries.html">futher enquiries</h3>
+        <h3> <a href="../web dev/enquiries.html">futher enquiries</a></h3>
     <h3><a href="./about.html">about</h3>
 
 
